# autocomplete

./: .gitignore  CMakeLists.txt  README.md  makefile
app/: gui.py  lev.py  utils.py
data/: american-english-dict-sorted
lib/: CMakeLists.txt  levenshtein.py  minimal_fst.cpp  minimal_fst.h  state.cpp  state.h
lib/levenshtein/: LevenshteinAutomaton.cpp  LevenshteinAutomaton.h  buildDFAfromLA.cpp  buildDFAfromLA.h
src/: CMakeLists.txt  main.cpp  sort_dict.py  state.cpp  state.h
test/: makefile  test_dict.cpp  test_fst.cpp
